--- a/public/assets/templates/navbar.html
+++ b/public/assets/templates/navbar.html
@@ -1,4 +1,4 @@
-<!-- Navbar Template v1.0.0 -->
+<!-- Navbar Template v1.0.0 (完整複製) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{BASE_URL}}/index.html">
@@ -11,15 +11,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto align-items-center">
         <li class="nav-item">
-          <a class="nav-link" href="{{BASE_URL}}/index.html">
-            <i class="fas fa-home me-1"></i>首頁
-          </a>
+          <a class="nav-link" href="{{BASE_URL}}/index.html"><i class="fas fa-home me-1"></i>首頁</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="physicsDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <i class="fas fa-flask me-1"></i>物理
-          </a>
+          <a class="nav-link dropdown-toggle" href="#" id="physicsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-flask me-1"></i>物理</a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="physicsDropdown">
             <li><a class="dropdown-item" href="{{BASE_URL}}/physics/free-fall.html">自由落體</a></li>
             <li><a class="dropdown-item" href="{{BASE_URL}}/physics/convex-lens-imaging.html">凸透鏡成像</a></li>
@@ -27,19 +22,13 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="chemistryDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <i class="fas fa-vial me-1"></i>化學
-          </a>
+          <a class="nav-link dropdown-toggle" href="#" id="chemistryDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-vial me-1"></i>化學</a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="chemistryDropdown">
             <li><a class="dropdown-item" href="{{BASE_URL}}/chemistry/kinetic-theory-gas.html">氣體動力論</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="mathDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            <i class="fas fa-calculator me-1"></i>數學
-          </a>
+          <a class="nav-link dropdown-toggle" href="#" id="mathDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-calculator me-1"></i>數學</a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="mathDropdown">
             <li><a class="dropdown-item disabled" href="#">（即將推出）</a></li>
           </ul>
